# CARL-Client

./: .env  .env.example  .gitignore  Dockerfile  boot_client.sh  confest.py  custom_update.py  deploy.sh  docker-compose.yml  env  get_ip.sh  manage.py  pylama.ini  pyproject.toml  pytest.ini  readme.md  requirements.txt  restart.sh  update.sh
.github/: pull_request_template.md
.github/workflows/: python-app.yml
fibaro/: adapter.py  apps.py  exceptions.py  fibaro.py  handlers.py  models.py  validators.py  ypostirizo.py
fibaro/fixtures/: initial.yaml
fibaro/samples/: devices.py  events.py  invalidResponses.json  lightSensor.json  presenceSensor.json  responses.json  room.json  section.json  tempSensor.json
fibaro/samples/devices/: devices.json  doorSensor.json  floodSensor.json  lightSensor.json  presenceSenor.json  presenceSensor.json  redButtonSensor.json  tempSensor.json
fibaro/tests/: test_adapter.py  test_device.py  test_devices.py  test_event.py  test_room.py  test_section.py  test_ypostirizo.py  tests_unit.py
scheduler/: celery.py  celeryconfig.py  tasks.py
scheduler/Cloud/: tasks.py
scheduler/Fibaro/: tasks.py
scheduler/RadarBase/: tasks.py
ypostirizoclient/: asgi.py  config.py  settings.py  urls.py  wsgi.py
