[tool.poetry]
name = "ypostiriZO-client"
version = "0.1.0"
description = "A client of ypostiriZO platform"
authors = ["Dimitrios Strantsalis <dstrants@iti.gr>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "pydantic"
pydantic = "^1.5.1"
django-extensions = "^2.2.9"
python-dotenv = "^0.13.0"
requests = "^2.23.0"
pendulum = "^2.1.0"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
